[package]
name = "solana-program-build-err"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_program_build_err"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
# Local clone of Solana. Using a `git` dependency here is too painful for cargo
# (cloning the repo and fetching metadata takes ages).
solana-program = { path = "../../../solana/sdk/program" }
